test/basic/tile_config_reject_explicit_left_a5.pto
// RUN: ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module attributes {"pto.device-spec" = "Ascend950"} {
  func.func @reject_explicit_left_blayout_a5() {
    %lhs = pto.alloc_tile : !pto.tile_buf<loc=left, dtype=f32, rows=32, cols=32, v_row=32, v_col=32, blayout=row_major>
    return
  }
}

// CHECK: error: 'pto.alloc_tile' op explicit tile config field 'blayout' for loc=left on arch a5 must be col_major, got row_major
